[package]
name = "jadwiga"
version = "0.1.0"
authors = ["Miranda Kastemaa <miranda@foldplop.com>"]

[lib]
name = "jadwiga"
path = "src/lib.rs"

[[bin]]
name = "jadwiga-exe"
path = "src/main.rs"

[dependencies]
activitypub = "0.1"
bincode = "1.0"
diesel = { version = "1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.9"
failure = "0.1"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"